compiler/test-data/parser/errors/blueprint/unclosed_param_list.frel
module test

blueprint Greeting(name: String {
    text { name }
}
